<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSCalc</string>
    <string name="action_settings">Info.</string>
    <string name="n0"> 0 </string>
    <string name="n1"> 1 </string>
    <string name="n2"> 2 </string>
    <string name="n3"> 3 </string>
    <string name="n4"> 4 </string>
    <string name="n5"> 5 </string>
    <string name="n6"> 6 </string>
    <string name="n7"> 7 </string>
    <string name="n8"> 8 </string>
    <string name="n9"> 9 </string>
    <string name="Equal"> = </string>
    <string name="Soma"> + </string>
    <string name="Menos"> - </string>
    <string name="Dividir"> ÷ </string>
    <string name="mult"> × </string>
    <string name="nPONTO"> . </string>
    <string name="Porcentagem"> % </string>
    <string name="clearAll"> c </string>
    <string name="clear"> Limpar </string>


</resources>
