<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/cinzaClaro"
              android:orientation="vertical"
              android:weightSum="1">

    <RelativeLayout
        android:id="@+id/relativeText"
        android:layout_width="499dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/relativeClear"
        android:background="@drawable/visor_style"
        android:gravity="left">

        <TextView
            android:id="@+id/txv_Campo1"
            android:layout_width="320dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            android:lineSpacingExtra="12dp"
            android:maxLength="16"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/cinzaEscuro"
            android:textSize="30dp"/>

        <TextView
            android:id="@+id/txv_separacao"
            android:layout_width="320dp"
            android:layout_height="4dp"
            android:layout_alignBottom="@+id/txv_Calc"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border_bottom"
            android:maxLength="1"
            android:textColor="@color/cinzaEscuro"
            android:textSize="50dp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/txv_Calc"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="12dp"
            android:gravity="right"
            android:maxLength="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/cinzaEscuro"
            android:textSize="35dp"/>

        <TextView
            android:id="@+id/txv_Campo2"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_below="@+id/txv_Calc"
            android:layout_marginLeft="15dp"
            android:lineSpacingExtra="12dp"
            android:maxLength="16"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/cinzaEscuro"
            android:textSize="30dp"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeClear"
        android:layout_width="101dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_marginRight="-2dp"
        android:layout_marginTop="-100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear"
            style="@style/btnSimbuloBase"
            android:layout_width="104dp"
            android:layout_height="100dp"
            android:onClick="apagaDigitos"
            android:text="@string/clear"
            android:textSize="20dp"
            />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeText"
        android:gravity="left"
        >


        <LinearLayout

            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="-5dp">


            <Button
                android:id="@+id/n7"
                style="@style/btnNumbersBaseV"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaValor"
                android:text="@string/n7"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/n8"
                style="@style/btnNumbersBaseV"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaValor"
                android:text="@string/n8"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/n9"
                style="@style/btnNumbersBaseV"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaValor"
                android:text="@string/n9"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/btn_Div"
                style="@style/btnSimbuloBaseTipo"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaTipo"
                android:text="@string/Dividir"
                android:textSize="30dp"
                />


            <Button
                android:id="@+id/btn_Porcent"
                style="@style/btnSimbuloBase"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaPorcentagem"
                android:text="@string/Porcentagem"
                android:textSize="30dp"/>


            <Button
                android:id="@+id/btn_clearAll"
                style="@style/btnSimbuloBase"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="apagaTudo"
                android:text="@string/clearAll"
                android:textSize="30dp"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/layout1"
            android:layout_marginTop="-5dp">

            <Button
                android:id="@+id/n4"
                style="@style/btnNumbersBaseV"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaValor"
                android:text="@string/n4"
                android:textSize="30dp"
                />

            <Button
                android:id="@+id/n5"
                style="@style/btnNumbersBaseV"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaValor"
                android:text="@string/n5"
                android:textSize="30dp"
                />

            <Button
                android:id="@+id/n6"
                style="@style/btnNumbersBaseV"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaValor"
                android:text="@string/n6"
                android:textSize="30dp"
                />


            <Button
                android:id="@+id/btn_Mult"
                style="@style/btnSimbuloBaseTipo"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaTipo"
                android:text="@string/mult"
                android:textSize="30dp"
                />

            <Button
                android:id="@+id/btn_Soma"
                style="@style/btnSimbuloBaseTipo"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaTipo"
                android:text="@string/Soma"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/btn_Menos"
                style="@style/btnSimbuloBaseTipo"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaTipo"
                android:text="@string/Menos"
                android:textSize="30dp"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/layout2"
            android:layout_marginTop="-5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/n1"
                style="@style/btnNumbersBaseV"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaValor"
                android:text="@string/n1"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/n2"
                style="@style/btnNumbersBaseV"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaValor"
                android:text="@string/n2"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/n3"
                style="@style/btnNumbersBaseV"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaValor"
                android:text="@string/n3"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/n0"
                style="@style/btnNumbersBaseV"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaValor"
                android:text="@string/n0"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/btn_Ponto"
                style="@style/btnSimbuloPontoEqual"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:onClick="adicionaPonto"
                android:text="@string/nPONTO"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/btn_Equal"
                style="@style/btnSimbuloPontoEqual"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:layout_margin="-4dp"
                android:onClick="adicionaCalculo"
                android:text="@string/Equal"
                android:textSize="30dp"/>


        </LinearLayout>


    </RelativeLayout>

</LinearLayout>
