<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.example.myapplication2.app.MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/tableLayout"
        android:background="#ccc">

        <ScrollView
            android:id="@+id/layout"
            android:layout_height="140dp"
            android:layout_alignParentBottom="true"
            android:scrollbars="horizontal|vertical"
            android:layout_width="fill_parent"

            android:scrollbarStyle="outsideInset">
            <HorizontalScrollView android:id="@+id/horizontalView"
                android:layout_height="120dp"
                android:scrollbars="horizontal|vertical"
                android:layout_width="wrap_content">


                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">

                </TableRow>

                </HorizontalScrollView>

        </ScrollView>


    </TableLayout>

    <LinearLayout
        android:id="@+id/layout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_below="@+id/tableLayout"
        android:weightSum="1"
        android:layout_alignParentLeft="true">

        <Button
            android:id="@+id/clear"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/clear"
            android:layout_weight="0.15"
            android:textColor="#FFFFFF"
            android:background="@drawable/symbolsbutton"
            android:textSize="20dp"
            android:onClick="limparCampos"/>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/layout0"
        android:weightSum="1"
        android:layout_alignParentLeft="true">


        <Button
            android:id="@+id/n7"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:text="@string/n7"
            android:layout_weight="0.15"
            android:textColor="#FFFFFF"
            android:background="@drawable/numbers"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaValor"/>

        <Button
            android:id="@+id/n8"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_weight="0.15"
            android:text="@string/n8"
            android:textColor="#FFFFFF"
            android:background="@drawable/numbers"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaValor"/>

        <Button
            android:id="@+id/n9"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:text="@string/n9"
            android:layout_weight="0.15"
            android:textColor="#FFFFFF"
            android:background="@drawable/numbers"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaValor"/>

        <Button
            android:id="@+id/btn_Div"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:text="@string/Dividir"
            android:layout_weight="0.15"
            android:textColor="#FFFFFF"
            android:background="@drawable/symbolsbutton"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaTipo"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/layout1"
        android:weightSum="1">


        <Button
            android:id="@+id/n4"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:text="@string/n4"
            android:layout_weight="0.15"
            android:textColor="#FFFFFF"
            android:background="@drawable/numbers"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaValor"/>

        <Button
            android:id="@+id/n5"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_weight="0.15"
            android:text="@string/n5"
            android:textColor="#FFFFFF"
            android:background="@drawable/numbers"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaValor"/>

        <Button
            android:id="@+id/n6"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:text="@string/n6"
            android:layout_weight="0.15"
            android:textColor="#FFFFFF"
            android:background="@drawable/numbers"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaValor"/>

        <Button
            android:id="@+id/btn_Mult"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:text="@string/mult"
            android:layout_weight="0.15"
            android:textColor="#FFFFFF"
            android:background="@drawable/symbolsbutton"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaTipo"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/layout2"
        android:weightSum="1">


        <Button
            android:id="@+id/n1"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:text="@string/n1"
            android:layout_weight="0.15"
            android:textColor="#FFFFFF"
            android:background="@drawable/numbers"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaValor"/>

        <Button
            android:id="@+id/n2"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_weight="0.15"
            android:text="@string/n2"
            android:textColor="#FFFFFF"
            android:background="@drawable/numbers"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaValor"/>

        <Button
            android:id="@+id/n3"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:text="@string/n3"
            android:layout_weight="0.15"
            android:textColor="#FFFFFF"
            android:background="@drawable/numbers"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaValor"/>

        <Button
            android:id="@+id/btn_Menos"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:text="@string/Menos"
            android:layout_weight="0.15"
            android:textColor="#FFFFFF"
            android:background="@drawable/symbolsbutton"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaTipo"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/layout3"
        android:weightSum="1">


        <Button
            android:id="@+id/btn_Ponto"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:text="@string/nPONTO"
            android:layout_weight="0.15"
            android:textColor="#FFFFFF"
            android:background="@drawable/symbolsbutton"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaPonto"/>

        <Button
            android:id="@+id/n0"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_weight="0.15"
            android:text="@string/n0"
            android:textColor="#FFFFFF"
            android:background="@drawable/numbers"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaValor"/>

        <Button
            android:id="@+id/btn_Equal"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:text="@string/Equal"
            android:textColor="#FFFFFF"
            android:background="@drawable/symbolsbutton"
            android:layout_weight="0.15"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaCalculo"/>

        <Button
            android:id="@+id/btn_Soma"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:text="@string/Soma"
            android:textColor="#FFFFFF"
            android:background="@drawable/symbolsbutton"
            android:layout_weight="0.15"
            android:textSize="30dp"
            android:layout_margin="2dp"
            android:onClick="adicionaTipo"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txv_Campo1"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:text=""
        android:lineSpacingExtra="12dp"
        android:textSize="35dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:maxLength="16"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/txv_Calc"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:text=""
        android:gravity="right"
        android:textSize="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:maxLength="1"
        android:layout_marginTop="40dp"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/txv_Campo2"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:text=""
        android:textSize="35dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:maxLength="16"
        android:layout_marginLeft="10dp"
        android:layout_alignRight="@+id/tableLayout"
        android:layout_below="@+id/txv_Calc" />


</RelativeLayout>
